test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_external_library_function_as_suffix.sol
library L {
    function suffix(uint x) external pure returns (uint) { return x; }
}

contract C {
    uint x = 1000 L.suffix;
}
// ----
// TypeError 4438: (112-125): The literal suffix must be either a subdenomination or a file-level suffix function.
